--- a/DSWaveformImageExample/Base.lproj/Main.storyboard
+++ b/DSWaveformImageExample/Base.lproj/Main.storyboard
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.68" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="z6Z-Y0-xb3">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Waveform-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="DSWaveformImageExample" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Waveform" id="BYZ-38-t0r" customClass="ViewController" customModule="DSWaveformImageExample" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -22,28 +22,28 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="w9S-UI-8uW">
-                                <rect key="frame" x="0.0" y="28" width="320" height="540"/>
+                                <rect key="frame" x="0.0" y="28" width="320" height="491"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3wf-8h-Skp">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="135"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="123"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="3wf-8h-Skp" secondAttribute="height" multiplier="16:9" priority="900" id="Eou-Wo-W75"/>
                                         </constraints>
                                     </imageView>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="J48-qg-hXd" customClass="WaveformImageView" customModule="DSWaveformImage">
-                                        <rect key="frame" x="0.0" y="135" width="320" height="135"/>
+                                        <rect key="frame" x="0.0" y="123" width="320" height="122.5"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="J48-qg-hXd" secondAttribute="height" multiplier="16:9" priority="900" id="t5F-rm-fdn"/>
                                         </constraints>
                                     </imageView>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aQM-Ik-oVa">
-                                        <rect key="frame" x="0.0" y="270" width="320" height="135"/>
+                                        <rect key="frame" x="0.0" y="245.5" width="320" height="123"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="aQM-Ik-oVa" secondAttribute="height" multiplier="16:9" priority="900" id="Exg-81-t2N"/>
                                         </constraints>
                                     </imageView>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dFS-ni-sSF">
-                                        <rect key="frame" x="0.0" y="405" width="320" height="135"/>
+                                        <rect key="frame" x="0.0" y="368.5" width="320" height="122.5"/>
                                     </imageView>
                                 </subviews>
                                 <constraints>
@@ -64,6 +64,7 @@
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="w9S-UI-8uW" secondAttribute="bottom" id="w7f-ap-sas"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Waveform" id="Tvg-eP-G67"/>
                     <connections>
                         <outlet property="bottomWaveformView" destination="aQM-Ik-oVa" id="iev-uC-R8S"/>
                         <outlet property="lastWaveformView" destination="dFS-ni-sSF" id="gNb-0B-lEW"/>
@@ -73,7 +74,62 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="140" y="138.98050974512745"/>
+            <point key="canvasLocation" x="1136.25" y="138.38028169014083"/>
+        </scene>
+        <!--Artistic-->
+        <scene sceneID="cKq-U5-evK">
+            <objects>
+                <viewController title="Artistic" id="Lhb-As-9mf" customClass="ArtisticViewController" customModule="DSWaveformImageExample" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="FT7-zV-DUY"/>
+                        <viewControllerLayoutGuide type="bottom" id="iWQ-py-Pfn"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fqg-OH-uWJ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sCP-bc-sDC">
+                                <rect key="frame" x="16" y="140" width="288" height="288"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="sCP-bc-sDC" secondAttribute="height" multiplier="1:1" id="HdG-QR-XeW"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="sCP-bc-sDC" firstAttribute="centerY" secondItem="fqg-OH-uWJ" secondAttribute="centerY" id="RqB-oD-dLr"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="sCP-bc-sDC" secondAttribute="trailing" id="dVi-VW-bRR"/>
+                            <constraint firstItem="sCP-bc-sDC" firstAttribute="centerX" secondItem="fqg-OH-uWJ" secondAttribute="centerX" id="wMP-ol-Tzg"/>
+                            <constraint firstItem="sCP-bc-sDC" firstAttribute="leading" secondItem="fqg-OH-uWJ" secondAttribute="leadingMargin" id="x3k-7f-4Lw"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Artistic" id="3AX-gP-Jd1"/>
+                    <connections>
+                        <outlet property="imageView" destination="sCP-bc-sDC" id="qkX-jt-CMv"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3T1-Vk-XQj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1136" y="846"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="vCV-j8-mSj">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="z6Z-Y0-xb3" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Ndz-ec-P9g">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="Z1q-Hh-WHe"/>
+                        <segue destination="Lhb-As-9mf" kind="relationship" relationship="viewControllers" id="74h-u9-Fpv"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1fn-Y2-wUH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="138.75" y="138.38028169014083"/>
         </scene>
     </scenes>
 </document>
